force-app/main/default/objects/InvoiceProduct__c/InvoiceProduct__c.object-meta.xml
<CustomObject>
    <label>請求商品</label>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>請求商品名</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>請求商品</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>