force-app/main/default/objects/InvoiceProduct__c/fields/ActualInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>ActualInvoiceDate__c</fullName>
    <label>実際請求日</label>
    <type>Date</type>
</CustomField>