force-app/main/default/objects/InvoiceProduct__c/fields/BillingAccountSnapShot__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountSnapShot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求アカウント（SnapShot）</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>請求商品</relationshipLabel>
    <relationshipName>InvoiceProductsBillingAccountSnapShot</relationshipName>
    <type>Lookup</type>
</CustomField>