force-app/main/default/objects/InvoiceProduct__c/fields/BillingAddresseeSnapShot__c.field-meta.xml
<CustomField>
    <fullName>BillingAddresseeSnapShot__c</fullName>
    <label>請求先宛名（SnapShot）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>