force-app/main/default/objects/InvoiceProduct__c/fields/BillingDayOfMonthSnapShot__c.field-meta.xml
<CustomField>
    <fullName>BillingDayOfMonthSnapShot__c</fullName>
    <label>請求日（SnapShot）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>