force-app/main/default/objects/InvoiceProduct__c/fields/BillingEmailBccSnapShot__c.field-meta.xml
<CustomField>
    <fullName>BillingEmailBccSnapShot__c</fullName>
    <label>請求アドレス Bcc（SnapShot）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>