force-app/main/default/objects/InvoiceProduct__c/fields/BillingEmailCcSnapShot__c.field-meta.xml
<CustomField>
    <fullName>BillingEmailCcSnapShot__c</fullName>
    <label>請求アドレス Cc（SnapShot）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>