force-app/main/default/objects/InvoiceProduct__c/fields/BillingEmailToSnapShot__c.field-meta.xml
<CustomField>
    <fullName>BillingEmailToSnapShot__c</fullName>
    <label>請求アドレス To（SnapShot）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>