force-app/main/default/objects/InvoiceProduct__c/fields/ContractHistory__c.field-meta.xml
<CustomField>
    <fullName>ContractHistory__c</fullName>
    <label>契約履歴</label>
    <referenceTo>ContractHistory__c</referenceTo>
    <relationshipLabel>請求商品</relationshipLabel>
    <relationshipName>ContractHistoryInvoiceHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>