force-app/main/default/objects/InvoiceProduct__c/fields/ContractProduct__c.field-meta.xml
<CustomField>
    <fullName>ContractProduct__c</fullName>
    <label>契約商品</label>
    <referenceTo>ContractProduct__c</referenceTo>
    <relationshipLabel>請求商品</relationshipLabel>
    <relationshipName>ContractProductInvoiceProducts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>