force-app/main/default/objects/InvoiceProduct__c/fields/ExportMergeKey__c.field-meta.xml
<CustomField>
    <fullName>ExportMergeKey__c</fullName>
    <description>請求書単位のエクスポート・差分集計用キー</description>
    <formula>&quot;INV|BA=&quot; &amp; BillingAccountSnapShot__c &amp; &quot;|DT=&quot; &amp; TEXT(InvoiceDate__c) &amp; &quot;|PT=&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(PaymentTermSnapShot__c, &quot;|&quot;, &quot;~&quot;), &quot;_&quot;, &quot;~&quot;), &quot;:&quot;, &quot;~&quot;) &amp; &quot;|BD=&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(BillingDayOfMonthSnapShot__c, &quot;|&quot;, &quot;~&quot;), &quot;_&quot;, &quot;~&quot;), &quot;:&quot;, &quot;~&quot;) &amp; &quot;|AD=&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(BillingAddresseeSnapShot__c, &quot;|&quot;, &quot;~&quot;), &quot;_&quot;, &quot;~&quot;), &quot;:&quot;, &quot;~&quot;) &amp; &quot;|TO=&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(BillingEmailToSnapShot__c, &quot;|&quot;, &quot;~&quot;), &quot;_&quot;, &quot;~&quot;), &quot;:&quot;, &quot;~&quot;) &amp; &quot;|CC=&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(BillingEmailCcSnapShot__c, &quot;|&quot;, &quot;~&quot;), &quot;_&quot;, &quot;~&quot;), &quot;:&quot;, &quot;~&quot;) &amp; &quot;|BC=&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(BillingEmailBccSnapShot__c, &quot;|&quot;, &quot;~&quot;), &quot;_&quot;, &quot;~&quot;), &quot;:&quot;, &quot;~&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>エクスポートマージキー</label>
    <type>Text</type>
</CustomField>