force-app/main/default/objects/InvoiceProduct__c/fields/LatestExportDate__c.field-meta.xml
<CustomField>
    <fullName>LatestExportDate__c</fullName>
    <label>最新エクスポート日</label>
    <type>Date</type>
</CustomField>