force-app/main/default/objects/InvoiceProduct__c/fields/PaymentTermSnapShot__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermSnapShot__c</fullName>
    <label>支払サイト（SnapShot）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>