force-app/main/default/objects/InvoiceProduct__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <length>100</length>
    <type>Text</type>
</CustomField>